# TradeMasterOnline

./: .cursorignore  .cursorindexingignore  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/skills/deep-survey/: SKILL.md
.agents/skills/deep-survey/references/: marl-example.md
.github/workflows/: pytest.yml
docs/manual/: README.md  architecture.md  core_modules.md  extension_guide.md  trading_env.md
docs/plan/: 2026-05-24_trading_env_mvp_design.md
docs/survey/: 2026-05-24_crypto_exchange_mechanisms_survey.md  2026-05-24_multi_agent_rl_env_survey.md  multi_agent_rl_env_survey.md
examples/: __init__.py  exchange_demo.py  random_agents.py  trading_simulation.py  trading_simulation_demo.html
examples/configs/: default.yaml
tests/: __init__.py  test_auto_generation.py  test_constants.py  test_edge_cases.py  test_exchange.py  test_market_orders.py  test_models.py  test_order_parameters.py  test_price_crossing.py  test_trading_pair.py  test_typing.py  test_typing_comprehensive.py  test_visualization.py
tests/examples/: test_random_agents.py  test_simulation_basic.py
tests/tmo/: test_exchange.py  test_trading_pair.py
tests/tmo/config/: test_schema.py
tests/tmo/core/: test_matcher.py  test_order.py  test_order_book.py
tests/tmo/env/: test_trading_env.py
tmo/: __init__.py  constants.py  example.py  exchange.py  models.py  trading_pair.py  typing.py  user.py  visualization.py
tmo/config/: __init__.py  schema.py
tmo/core/: __init__.py  matcher.py  order.py  order_book.py
tmo/env/: __init__.py  trading_env.py
tmo/utils/: types.py
