

[project]
name = "trademaster-online"
dynamic = ["version"]
description = "A multi-agent trading simulation game"
authors = [
    {name = "0xWelt", email = "dinghao12601@126.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.14,<3.15"
dependencies = [
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.2.1",
    "ruff>=0.1.0",
    "pre-commit>=4.2.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tmo/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["tmo"]

[tool.hatch.metadata]
typing-files = ["tmo/typing.py"]

# Linter tools #################################################################

[tool.codespell]
ignore-words = "docs/spelling_wordlist.txt"

[tool.ruff]
target-version = "py314"
line-length = 100
output-format = "full"
src = ["tmo", "examples", "tests"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = false
skip-magic-trailing-comma = false

[tool.ruff.lint]
allowed-confusables = ["，", "。", "：", "？", "！", "、", "（", "）", "；", "“", "”"]
select = [
    "FAST",    # FastAPI
    "YTT",     # flake8-2020
    "ANN",     # flake8-annotations
    "ASYNC",   # flake8-async
    "S",       # flake8-bandit
    "BLE",     # flake8-blind-except
    "B",       # flake8-bugbear
    "COM",     # flake8-commas
    "C4",      # flake8-comprehensions
    "DTZ",     # flake8-datetimez
    "T10",     # flake8-debugger
    "EM",      # flake8-errmsg
    "EXE",     # flake8-executable
    "FA",      # flake8-future-annotations
    "ISC",     # flake8-implicit-str-concat
    "LOG",     # flake8-logging
    "INP",     # flake8-no-pep420
    "PIE",     # flake8-pie
    "T20",     # flake8-print
    "PYI",     # flake8-pyi
    "PT",      # flake8-pytest-style
    "Q",       # flake8-quotes
    "RSE",     # flake8-raise
    "SIM",     # flake8-simplify
    "TID",     # flake8-tidy-imports
    "TC",      # flake8-type-checking
    "ARG",     # flake8-unused-arguments
    "I",       # isort
    "C90",     # mccabe complexity
    "NPY",     # NumPy-specific rules
    "PD",      # pandas-vet
    "N",       # pep8-naming
    "PERF",    # perflint
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "PGH",     # pygrep-hooks
    "PL",      # Pylint
    "UP",      # pyupgrade
    "FURB",    # refurb
    "RUF",     # ruff
    "TRY",     # tryceratops
]
preview = true
explicit-preview-rules = true
ignore = [
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "ANN204",  # missing-return-type-special-method
    "ANN401",  # any-type
    "B027",    # empty-method-without-abstract-decorator
    "BLE001",  # blind-except
    "C401",    # unnecessary set comprehension
    "C416",    # unnecessary-comprehension
    "COM812",  # missing-trailing-comma
    "EM101",   # raw-string-in-exception
    "EM102",   # f-string-in-exception
    "E501",    # line-too-long
    "N802",    # invalid-function-name
    "PLC0415", # import-outside-top-level
    "PLR2004", # magic value used in comparison
    "PT012",   # pytest-raises-with-multiple-statements
    "PT028",   # pytest-parameter-with-default-argument
    "RUF005",  # collection-literal-concatenation
    "RUF052",  # used-dummy-variable
    "S101",    # assert
    "S105",    # hardcoded-password-string
    "S106",    # hardcoded-password-func-arg
    "S107",    # hardcoded-password-default
    "S108",    # hardcoded-temp-file
    "S301",    # suspicious-pickle-usage
    "S311",    # suspicious-non-cryptographic-random-usage
    "S324",    # hashlib-insecure-hash-function
    "SIM105",  # suppressible-exception
    "SIM108",  # if-else-block-instead-of-if-exp
    "TID252",  # relative-imports
    "TRY003",  # raise-vanilla-args
    "TRY301",  # raise-within-try
    "TRY400",  # error-instead-of-exception
    "UP047",   # type parameters
    "W505",    # doc-line-too-long
]
extend-safe-fixes = [
    "C408",     # unnecessary-collection-call
    "E711",     # none-comparison
    "FURB129",  # readlines-in-for
    "PERF102",  # incorrect-dict-iterator
    "PIE810",   # multiple-starts-ends-with
    "SIM102",   # collapsible-if
    "TC001",    # typing-only-first-party-import
    "TC002",    # typing-only-third-party-import
    "TC003",    # typing-only-standard-library-import
    "TC004",    # runtime-import-in-type-checking-block
    "TRY201",   # verbose-raise
    "UP004",    # useless-object-inheritance
    "UP008",    # super-call-with-parameters
    "UP038",    # non-pep604-isinstance
    "UP039",    # unnecessary-class-parentheses
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # unused-import
]
"tests/**" = [
    "T201",    # print
]
"examples/**" = [
    "T201",    # print
]

[tool.ruff.lint.mccabe]
max-complexity = 17

[tool.ruff.lint.pylint]
max-args = 15
max-positional-args = 7
max-statements = 60

[tool.ruff.lint.isort]
known-first-party = ["tmo"]
known-local-folder = ["tmo", "examples", "tests"]
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["pydantic.validate_call"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
timeout = 30
addopts = "--tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = [
    ".venv/**",
    "dist/**",
    "build/**",
    ".git/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
]

[tool.ty.rules]
# Treat unresolved-attribute as warning to reduce noise from platform-specific
# modules (e.g. winreg on Linux) and third-party C extensions during beta.
unresolved-attribute = "warn"
# Ban invalid / unused type-ignore comments.
unused-type-ignore-comment = "error"
